[project]
name = "gta6-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.107.1",
    "feedparser>=6.0.12",
    "google-genai>=2.8.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gta6_tracker"]

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
]

[project.scripts]
pipeline = "gta6_tracker.pipeline:main"
